--- a/README.asciidoc
+++ b/README.asciidoc
@@ -5,11 +5,20 @@ v1,21-Jul-2015
 :blogpost-categories: scala
 
 == Warning
-Please note, I don't like, recommend or use gitflow outside my current job. It's dogmatic and will unnecessarily complicate your code base. If you have a choice, do something, anything other than gitflow. I only created this plugin because the current SBT gitflow plugin is woefully out of date. I needed to bring some sanity to my daily grind. "Abandon all hope ye who enter here"
+Please note, I don't like, recommend or use gitflow outside my current job. It's dogmatic and will unnecessarily complicate your code base. If you have a choice, do something, anything other than gitflow. I only created this plugin because the current SBT gitflow plugin is woefully out of date. I needed to bring some sanity to my daily grind. I'm also not going to maintain a release. Feel free to fork.
+
+"Abandon all hope ye who enter here"
 
 Based on https://github.com/sbt/sbt-release
 
 == Add to your project
+Clone, and publishLocal
+[source]
+----
+git clone https://github.com/lancegatlin/sbt-release-gitflow.git
+cd sbt-release-gitflow
+sbt publishLocal
+----
 Create (or add to) project/plugins.sbt:
 [source,sbt,numbered]
 ----
@@ -27,7 +36,7 @@ version in ThisBuild := "X.Y.Z-SNAPSHOT"
 ==== Command: releaseCreate
 ==== Overview:
 
-. Create a new gitflow release branch (release/X.Y.Z) 
+. Create a new gitflow release branch (default name: 'release/X.Y.Z') 
 .. Note: release branch version will be the same as develop
 . Advance the version number of the develop branch '-SNAPSHOT' version
 . Push everything to origin
@@ -37,21 +46,22 @@ version in ThisBuild := "X.Y.Z-SNAPSHOT"
 
 ==== Command Options
 * with-defaults
-** Don't prompt for options, always pick the default. Used this when running in automation scripts.
+** Don't prompt for options, always pick the default. Use this when running in automation scripts.
 * dry-run
-** Don't actually do anything, but emit the git commands that will be fired
+** Don't actually do anything, but print the git commands that will be fired
 * skip-tests
 ** Don't run tests
 * skip-publish
 ** Don't publish
 * skip-if-exists
-** Normally a fatal error occurrs if a release branch already exists. If this is set, checkout existing release branch and compile, test and publish it
+** Normally a fatal error occurrs if a release branch already exists. If this is set and release branch exists, checkout existing release branch and compile, test and publish it
 * skip-push
 ** Don't push changes to origin
 
 === Close release
 ==== Command: releaseClose
 Note1: all fixes should be committed to the release branch prior to running this command
+
 Note2: all '-SNAPSHOT' dependencies must be manually removed from the SBT project prior to running this command
 
 ==== Overview
@@ -60,14 +70,15 @@ Note2: all '-SNAPSHOT' dependencies must be manually removed from the SBT projec
 . Remove '-SNAPSHOT' from version in version.sbt, commits change
 . Merge release branch into master branch
 . Tag commit 'vX.Y.Z'
+. Delete release branch
 . Push everything to origin
 . Publish release now on master branch
 
 ==== Command Options
 * with-defaults
-** Don't prompt for options, always pick the default. Used this when running in automation scripts.
+** Don't prompt for options, always pick the default. Use this when running in automation scripts.
 * dry-run
-** Don't actually do anything, but emit the git commands that will be fired
+** Don't actually do anything, but print the git commands that will be fired
 * skip-tests
 ** Don't run tests
 * skip-publish
@@ -83,9 +94,9 @@ Note2: all '-SNAPSHOT' dependencies must be manually removed from the SBT projec
 
 ==== Command Options
 * with-defaults
-** Don't prompt for options, always pick the default. Used this when running in automation scripts.
+** Don't prompt for options, always pick the default. Use this when running in automation scripts.
 * dry-run
-** Don't actually do anything, but emit the git commands that will be fired
+** Don't actually do anything, but print the git commands that will be fired
 * skip-push
 ** Don't push changes to origin
 
